--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -175,7 +175,9 @@
       "xr_button": "View in your space",
       "xr_button_label": "View in your space, loads item in augmented reality window",
       "include_taxes": "Tax included.",
-      "shipping_policy_html": "<a href=\"{{ link }}\">Shipping</a> calculated at checkout."
+      "shipping_policy_html": "<a href=\"{{ link }}\">Shipping</a> calculated at checkout.",
+      "shipping_rules": "Free US Shipping over {{ free_shipping_money }} | Free US Returns",
+      "installments_html": "{{ monthly_installments }} interest-free installments of {{ amount }} with "
     },
     "modal": {
       "label": "Media gallery"
